items alignment fix

--- a/express/fullstack-webpage/client/source/styles/Login.sass
+++ b/express/fullstack-webpage/client/source/styles/Login.sass
@@ -16,6 +16,7 @@
             margin-top: 10px
             display: flex
             flex-direction: column
+            align-items: center
             p
                 letter-spacing: 0px
                 a // we didn't used a tag rather we've used REACT LINK but html will take it as a tag therefore we've to target a tag
